# trial-chain

./: .gitignore  .gitmodules  README.md  data.json  default.nix  shell.nix  trial-chain.cabal  versions.nix
app/: Main.hs
nix/: haskellPackages.nix  versions.nix
src/: API.hs  Env.hs  Examples.hs  Launch.hs
src/API/: Handle.hs
src/Effectful/: TrialChain.hs  Validation.hs
src/Types/: Chain.hs  Semantic.hs  Transport.hs
src/Types/Semantic/: Parse.hs
src/Types/Semantic/Parse/: Validation.hs
test/: Main.hs
test/Effectful/: Client.hs
