cabal-version: 2.4
name:          trial-chain
version:       0.1.0.0
synopsis:
homepage:
license:
author:        Cyril Valyavin
maintainer:    kvalyavin@yandex.ru

common defs
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    OverloadedLabels
    TypeFamilies

  ghc-options:        -Wall -Wmissing-deriving-strategies

library
  import:          defs
  exposed-modules:
    API
    API.Handle
    Effectful.TrialChain
    Effectful.Validation
    Env
    Examples
    Launch
    Types.Chain
    Types.Semantic
    Types.Semantic.Parse
    Types.Transport

  build-depends:
                    aeson
                  , base               ^>=4.16.0.0
                  , binary
                  , bytestring
                  , containers
                  , cryptohash-sha256
                  , effectful
                  , effectful-core     >=1.2.0.0
                  , generic-lens
                  , hashable
                  , immortal
                  , lens
                  , pretty-simple
                  , servant-server
                  , streaming
                  , stm
                  , stm-containers
                  , warp

  hs-source-dirs:  src

executable trial-chain
  import:         defs
  main-is:        Main.hs
  build-depends:
    , base            ^>=4.16.0.0
    , pretty-simple
    , trial-chain

  hs-source-dirs: app

test-suite trial-chain-test
  import:         defs
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:  Effectful.Client
  build-depends:  base              ^>=4.16.0.0
                , effectful-core
                , http-client
                , lens
                , servant
                , servant-client
                , streaming
                , tasty
                , tasty-hunit
                , trial-chain
